# libsugar

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
effect/: CMakeLists.txt  effect.h
result/: CMakeLists.txt  Result.cc  Result.h
sugar/: effect.hpp
tests/: CMakeLists.txt  test_result.cc
